commit corrector por la falta de displayPort - 1

--- a/crditos.html
+++ b/crditos.html
@@ -104,7 +104,7 @@
 </tr>
 </tbody>
 </table>
-<p style="text-align: center;">Este contenido fue creado con <a href="http://exelearning.net/">eXeLearning</a>, el editor libre y de fuente abierta diseñado para crear recursos educativos.</p></div><p class="exe-download-package-link"><a href="conectores_y_cabelado.elp">Descargar el fichero .elp</a></p>
+<p style="text-align: center;">Este contenido fue creado con <a href="http://exelearning.net/">eXeLearning</a>, el editor libre y de fuente abierta diseñado para crear recursos educativos.</p></div><p class="exe-download-package-link"><a href="conectores_y_cableado.elp">Descargar el fichero .elp</a></p>
 </div>
 </div>
 </div>
