--- a/dnde_encaja_lo_que__hemos_aprendido.html
+++ b/dnde_encaja_lo_que__hemos_aprendido.html
@@ -60,8 +60,8 @@
 <p>Ahora... <strong>¡¡Haz tu propio resumen del contenido teórico!!</strong></p>
 <p>Si lo necesitas, puedes apoyarte en las siguientes plantillas para realizar resumen guiado del contenido teórico que hemos tratado:</p>
 </div>
-<ul class='exeFileList'><li><a href='Resumen guiado de conectores y cableado - imprimible.pdf' target='_blank'>Plantilla de resumen guiado de de conectores y cableado - imprimible<span> (Ventana nueva)</span></a></li>
-<li><a href='Plantilla de resumen guiado de conectores y cableado - editable.docx' target='_blank'>Plantilla de resumen guiado de de conectores y cableado - editable<span> (Ventana nueva)</span></a></li>
+<ul class='exeFileList'><li><a href='Plantilla de resumen guiado de conectores y cableado - imprimible_.pdf' target='_blank'>Plantilla de resumen guiado de de conectores y cableado - imprimible<span> (Ventana nueva)</span></a></li>
+<li><a href='Plantilla de resumen guiado de conectores y cableado - editable_.docx' target='_blank'>Plantilla de resumen guiado de de conectores y cableado - editable<span> (Ventana nueva)</span></a></li>
 </ul></div>
 </div>
 </div>
